org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/ClassDefinition/ClassDefinitionTest01/001_ClassDefinitionTest01.kmt
/* $Id:$ 
 * Creation : September 8, 2011
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            jfalcou
 */
using kermeta::standard
using org::kermeta::language::structure

package helloworld {
	 
	class A<G, H> {
	}
	 
	class B inherits A<String, Integer>, C {
	}
	
	class C inherits A<String, Integer> {
	}
	class MainClass{
		operation mainOperation() : Void is do end 
	}
}
