org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/VariableDecl/VariableDecl_type_mismatch_001/001_VariableDecl.kmt
/* $Id:$ 
 * Creation : July 27, 2011
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            jfalcou
 */


using kermeta::emfpersistence
using kermeta::standard
using kermeta::io::StdIO => stdio
using gna
package test{
    enum xxx{
    a;
    b;
    c;
    }

	enum yyy{
		a;
		b;
		c;
	}

    class MainClass
    {
        operation mainOperation() : Void is do


            var y : xxx init yyy.a

        end
    }
}
